// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alertbox handle color prop 1`] = `
<scale-alertbox icon="true" opened="">
  <mock:shadow-root>
    <div class="alertbox alertbox--color-black alertbox--icon" part="alertbox color-black icon">
      <div class="alertbox__container" part="container">
        <scale-icon-action-success accessibility-title="success" class="alertbox__icon-success"></scale-icon-action-success>
        <header class="alertbox__container-header" part="header">
          <slot name="header">
            <p>
              Missing Title
            </p>
          </slot>
        </header>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-alertbox>
`;

exports[`Alertbox handle color prop 2`] = `
<scale-alertbox icon="true" opened="">
  <mock:shadow-root>
    <div class="alertbox alertbox--color-blue alertbox--icon" part="alertbox color-blue icon">
      <div class="alertbox__container" part="container">
        <scale-icon-action-informational accessibility-title="info" class="alertbox__icon-info"></scale-icon-action-informational>
        <header class="alertbox__container-header" part="header">
          <slot name="header">
            <p>
              Missing Title
            </p>
          </slot>
        </header>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-alertbox>
`;

exports[`Alertbox handle color prop 3`] = `
<scale-alertbox icon="true" opened="">
  <mock:shadow-root>
    <div class="alertbox alertbox--color-error alertbox--icon" part="alertbox color-error icon">
      <div class="alertbox__container" part="container">
        <scale-icon-alert-error accessibility-title="error" class="alertbox__icon-error"></scale-icon-alert-error>
        <header class="alertbox__container-header" part="header">
          <slot name="header">
            <p>
              Missing Title
            </p>
          </slot>
        </header>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-alertbox>
`;

exports[`Alertbox handle color prop 4`] = `
<scale-alertbox icon="true" opened="">
  <mock:shadow-root>
    <div class="alertbox alertbox--color-yellow alertbox--icon" part="alertbox color-yellow icon">
      <div class="alertbox__container" part="container">
        <scale-icon-action-warning accessibility-title="warning" class="alertbox__icon-warning"></scale-icon-action-warning>
        <header class="alertbox__container-header" part="header">
          <slot name="header">
            <p>
              Missing Title
            </p>
          </slot>
        </header>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-alertbox>
`;

exports[`Alertbox handle color prop 5`] = `
<scale-alertbox icon="true" opened="">
  <mock:shadow-root>
    <div class="alertbox alertbox--color-green alertbox--icon" part="alertbox color-green icon">
      <div class="alertbox__container" part="container">
        <scale-icon-action-success accessibility-title="warsuccessning" class="alertbox__icon-success"></scale-icon-action-success>
        <header class="alertbox__container-header" part="header">
          <slot name="header">
            <p>
              Missing Title
            </p>
          </slot>
        </header>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-alertbox>
`;

exports[`Alertbox should match snapshot 1`] = `
<scale-alertbox opened="">
  <mock:shadow-root>
    <div class="alertbox alertbox--color-white" part="alertbox color-white">
      <div class="alertbox__container" part="container">
        <header class="alertbox__container-header" part="header">
          <slot name="header">
            <p>
              Missing Title
            </p>
          </slot>
        </header>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-alertbox>
`;
